Add instagram channel
